[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "volces-api"
version = "0.1.0"
description = "An unofficial asynchronous API wrapper for Jimeng (Volcengine AI)"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.24.0"
]
requires-python = ">=3.8"
